# awsmate

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  doc.md  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yaml  tests.yaml
doc/awsmate/: apigateway.html  apigateway.md  index.html  index.md  lambdafunction.html  lambdafunction.md  logger.html  logger.md  s3.html  s3.md
docs/: requirements.txt
docs/source/: apigateway.rst  awsmate.rst  awsmate_link.rst  changelog.rst  code_of_conduct.rst  conf.py  contributing.rst  eventbridge.rst  example_application.rst  genindex.rst  index.rst  indtables.rst  lambdafunction.rst  logger.rst  modules.rst  readme.rst  refguide.rst  release_process.rst  s3.rst  sns.rst  testing.rst  todo.rst
docs/source/_static/: flyout.js  theme.css
docs/source/_templates/: layout.html
example/: check_terraform  check_terraform.sh  deploy.sh  main.py  undeploy.sh  variables.tfvars
example/src/: lambda_apigateway_returns_403.py  lambda_apigateway_returns_500.py  lambda_apigateway_returns_json.py  lambda_apigateway_returns_okay.py  lambda_eventbridge_scheduler.py  lambda_logger.py  lambda_s3_notification.py  lambda_sns_message.py
example/tf/: 00-provider.tf  00-variables.tf  01-iam.tf  01-lambda-iam-role.tf  01-lambda-iam.tf  02-awsmate-lambda-layer.tf  02-lambda-functions.tf  02-lambda.tf  03-apigateway-lambda-functions.tf  03-apigateway.tf  04-apigateway.tf  05-eventbridge-lambda-functions.tf  05-s3-bucket.tf  06-eventbridge-iam-role.tf  06-lambda-functions-s3.tf  07-eventbridge-scheduler.tf  08-s3-bucket.tf  10-sns-topic.tf  11-sns-lambda-functions.tf  12-logger-lambda-functions.tf
maintenance/: release_process.md  todo.md
src/: awsmate.rst
src/awsmate/: __init__.py  apigateway.py  errors.py  eventbridge.py  lambdafunction.py  logger.py  s3.py  sns.py
tests/: conftest.py
tests/integration/: test_dummy_placeholder.py
tests/unit/: test_apigateway.py  test_eventbridge.py  test_lambdafunction.py  test_s3.py  test_sns.py
