[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build" 

[project]
name = "awsmate"
version = "0.0.3"
authors = [
    { name="Vincent Poulain (Shlublu)", email="shlublu@yahoo.fr" },
]
description = "A companion for your AWS Python developments."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3.9",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: European Union Public Licence 1.2 (EUPL 1.2)"
]
keywords = ["python", "aws", "aws-apigateway", "aws-lambda", "aws-s3"]

[project.urls]
"Repository" = "https://github.com/shlublu/awsmate"
"Documentation" = "https://awsmate.readthedocs.io/"
"Bug Tracker" = "https://github.com/shlublu/awsmate/issues"
"Changelog" = "https://github.com/shlublu/awsmate/blob/master/CHANGELOG.md"