[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build" 

[project]
name = "awsmate"
version = "0.4.2"
authors = [
    { name="Vincent Poulain (Shlublu)", email="shlublu@yahoo.fr" },
]
description = "A companion for your AWS Python developments."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Developers",
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: European Union Public Licence 1.2 (EUPL 1.2)"
]
keywords = ["python", "aws", "aws-apigateway", "aws-eventbridge", "aws-lambda", "aws-s3"]

[project.urls]
"Repository" = "https://github.com/shlublu/awsmate"
"Documentation" = "https://awsmate.readthedocs.io/"
"Bug Tracker" = "https://github.com/shlublu/awsmate/issues"
"Changelog" = "https://github.com/shlublu/awsmate/blob/master/CHANGELOG.md"
